# DLSlime

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_zh.md  dlslime_sendrecv_test.py.lprof  plot.py  pyproject.toml  rdma_benchmark_recv.json  rdma_benchmark_send.json  versions.json
NanoCtrl/: Cargo.toml  README.md  pyproject.toml
NanoCtrl/examples/: connect_nanoctrl.py
NanoCtrl/lua/: heartbeat.lua  register_agent.lua  register_entity.lua  unregister_engine.lua  unregister_entity.lua
NanoCtrl/nanoctrl/: __init__.py  client.py
NanoCtrl/scripts/: build_and_twine_wheel.sh
NanoCtrl/src/: error.rs  main.rs  models.rs  obs.rs  redis_repo.rs
NanoCtrl/src/handlers/: engine.rs  entity.rs  mod.rs  peer.rs  util.rs
csrc/dlslime/: CMakeLists.txt  logging.h
csrc/dlslime/device/: CMakeLists.txt  signal.h
csrc/dlslime/device/cuda/: cuda_signal.h  device_cuda.cpp
csrc/dlslime/device/host/: host_only.cpp  host_signal.h
csrc/dlslime/engine/: CMakeLists.txt  assignment.cpp  assignment.h
csrc/dlslime/engine/ascend_direct/: ascend_direct_transport.cpp
csrc/dlslime/engine/nvlink/: cuda_common.cuh  memory_pool.cpp  nvlink_endpoint.h
csrc/dlslime/engine/nvshmem/: CMakeLists.txt  nvshmem_context.cpp
csrc/dlslime/engine/rdma/: CMakeLists.txt  memory_pool.cpp  memory_pool.h  rdma_assignment.cpp  rdma_assignment.h  rdma_channel.cpp  rdma_channel.h  rdma_config.h  rdma_context.cpp  rdma_context.h  rdma_context_pool.h  rdma_endpoint.cpp  rdma_endpoint.h  rdma_future.cpp  rdma_io_endpoint.cpp  rdma_io_endpoint.h  rdma_msg_endpoint.cpp  rdma_msg_endpoint.h  rdma_worker.cpp  rdma_worker.h
csrc/dlslime/gloo/: CMakeLists.txt  algorithm.cc  allreduce.cc  context.cc
csrc/dlslime/gloo/common/: linux.cc  logging.cc
csrc/dlslime/gloo/rendezvous/: context.cc  file_store.cc  hash_store.cc  store.h
csrc/dlslime/gloo/transport/: pair.h
csrc/dlslime/ops/: CMakeLists.txt  exception.cuh  launch.cuh  nvshmem_api.cuh  nvshmem_common.cuh  nvshmem_runtime.cu  utils.cuh
csrc/engine/nvshmem/: CMakeLists.txt  buffer.h  nvshmem_context.cpp  nvshmem_context.h
csrc/engine/nvshmem/kernels/: CMakeLists.txt  api.cuh  internode_ll.cu  internode_ll.cuh  runtime.cu
csrc/engine/rdma/: CMakeLists.txt  affinity.h  memory_pool.cpp  memory_pool.h  rdma_assignment.cpp  rdma_assignment.h  rdma_buffer.cpp  rdma_buffer.h  rdma_channel.cpp  rdma_channel.h  rdma_common.h  rdma_config.h  rdma_context.cpp  rdma_context.h  rdma_context_pool.h  rdma_endpoint.cpp  rdma_endpoint.h  rdma_endpoint_v0.cpp  rdma_endpoint_v0.h  rdma_env.h  rdma_future.cpp  rdma_future.h  rdma_io_endpoint.cpp  rdma_io_endpoint.h  rdma_msg_endpoint.cpp  rdma_msg_endpoint.h  rdma_scheduler.cpp  rdma_utils.h  rdma_worker.cpp  rdma_worker.h  rdma_worker_pool.h  utils.cpp  utils.h
csrc/gloo/: CMakeLists.txt
csrc/gloo/common/: CMakeLists.txt
csrc/gloo/rendezvous/: CMakeLists.txt  store.h
csrc/gloo/transport/: CMakeLists.txt
csrc/gloo/transport/ibverbs/: CMakeLists.txt
csrc/ops/: CMakeLists.txt  configs.cuh  ep_m2n.cpp  ep_m2n.h  ibgda_device.cuh  nvshmem_api.cuh  nvshmem_common.cuh  nvshmem_runtime.cu  utils.cuh
csrc/ops/ibverbs/m2n_ibverbs_rc_ll/: m2n_ibverbs_rc_ll_buffer.cpp  m2n_ibverbs_rc_ll_buffer.h
csrc/ops/inter/all_gather_inter_ll/: all_gather_inter_ll.cu  all_gather_inter_ll_buffer.cpp  all_gather_inter_ll_buffer.h
csrc/ops/inter_ll/all_gather_inter_ll/: all_gather_inter_ll.cu  all_gather_inter_ll.h  all_gather_inter_ll_buffer.cpp  all_gather_inter_ll_buffer.h
csrc/ops/inter_ll/all_to_all_inter_ll/: all_to_all_inter_ll.cu  all_to_all_inter_ll.h  all_to_all_inter_ll_buffer.cpp  all_to_all_inter_ll_buffer.h
csrc/ops/intra/all_gather_intra/: all_gather_intra.cu  all_gather_intra.h  all_gather_intra_buffer.cpp  all_gather_intra_buffer.h
csrc/ops/intra/all_gather_intra_ll/: all_gather_intra_ll.h  all_gather_intra_ll_buffer.h
csrc/ops/intra/all_gather_ll/: all_gather_ll.cu  all_gather_ll.h  all_gather_ll_buffer.cpp  all_gather_ll_buffer.h  buffer.h
csrc/ops/intra_ll/all_gather_intra_ll/: all_gather_intra_buffer.cpp  all_gather_intra_ll.cu  all_gather_intra_ll.h  all_gather_intra_ll_buffer.cpp  all_gather_intra_ll_buffer.h
csrc/ops/intra_ll/all_to_all/: all_to_all_intra_ll.cu  all_to_all_intra_ll.h  all_to_all_intra_ll_buffer.cpp  (+1 more)
csrc/python/: CMakeLists.txt  bind.cpp
csrc/python/pybind_json/: pybind_json.hpp
csrc/torch/: CMakeLists.txt  backend.cpp  backend.h  gloo_backend.cpp  gloo_backend.h  slime_backend.cpp  slime_backend.h
dlslime/csrc/: CMakeLists.txt  topology.cpp  topology.h  utils.h
dlslime/csrc/cache/: CMakeLists.txt  bindings.cpp  cache_server.cpp  cache_server.h  extent.h
dlslime/csrc/common/: jring.h
dlslime/csrc/engine/: CMakeLists.txt  assignment.h
dlslime/csrc/observability/: CMakeLists.txt  obs.cpp  obs.h
dlslime/csrc/python/: CMakeLists.txt  bind.cpp
dlslime/csrc/rpc/: rpc_constants.h  rpc_session.cpp  rpc_session.h
docs/: Makefile  README.md  endpoint-ownership-model.md  mkdocs.local.yml  mkdocs.yml  nanodeploy_mla_sp_hao_basic_migration_requirements.md  pyproject.toml  requirements.txt  roadmap.md
docs/design/: dlslime-cache.md
docs/huawei_ascend/: README.md
docs/huawei_asecnd/: README.md
docs/src/: api_reference.md  api_reference.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  quickstart.md  quickstart.zh.md  versions.md  versions.zh.md
docs/src/design/: architecture.md  architecture.zh.md  dlslime-cache.md  endpoint-device-signal-refactor.md  endpoint-ownership-model.md
docs/src/guide/: benchmark-rpc.md  deployment.md  deployment.zh.md  dlslime-cache.md  dlslime-cache.zh.md  endpoint-api.md  endpoint-api.zh.md  index.md  index.zh.md  peeragent-api.md  peeragent-api.zh.md  slimerpc.md  slimerpc.zh.md
docs/src/platform/: index.md  index.zh.md
tests/cpp/: CMakeLists.txt  EP_recv_test.cpp  EP_send_test.cpp  jring_test.cpp  recv_test.cpp  send_test.cpp  sendrecv.cpp  sendrecv_test.cpp
tests/cpp/ascend_direct/: CMakeLists.txt  README_ENDPOINT.md  ascend_direct_perf.cpp  ascend_endpoint_perf.cpp
(+395 files in other folders)
