[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]

[project]
authors = [
  {name = "JimyMa", email = "hit16s105116@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Scientific/Engineering :: High Performance Computing",
]
description = "DLSlime Transfer Engine"
name = "dlslime"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1.post9"
dependencies = [
  "pydantic>=2.0",
  # for --build-no-isolation
  "scikit-build-core>=0.10",
  "pybind11>=2.12"
]

[project.urls]
Homepage = "https://github.com/DeepLink-org/DLSlime.git"
Repository = "https://github.com/DeepLink-org/DLSlime.git"

[tool.scikit-build]
# optional env variable:
# BUILD_TORCH_PLUGIN: OFF
# BUILD_NVLINK: OFF
# USE_MACA: OFF
cmake.args = [
  "-DDLSLIME_INSTALL_PATH=dlslime",
  "-DBUILD_PYTHON=ON"
]
cmake.build-type = "Release"
