[package]
name = "nanoctrl"
version = "0.1.0"
edition = "2021"
description = "NanoInfra control plane server"
license = "MIT"
repository = "https://github.com/JimyMa/NanoDeploy"

[[bin]]
name = "nanoctrl"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
comfy-table = "7"
